docs: add the titles for the DFS

--- a/pythonds-8-PE.ipynb
+++ b/pythonds-8-PE.ipynb
@@ -526,7 +526,9 @@
     "            resList.append((c,v))\n",
     "    resList.sort(key=lambda x: x[0])\n",
     "    return [y[1] for y in resList]\n",
-    "```"
+    "```\n",
+    "\n",
+    "### General Depth First Search"
    ]
   }
  ],
