docs: understand the general depth first search

--- a/pythonds-8-PE.ipynb
+++ b/pythonds-8-PE.ipynb
@@ -528,7 +528,9 @@
     "    return [y[1] for y in resList]\n",
     "```\n",
     "\n",
-    "### General Depth First Search"
+    "### General Depth First Search\n",
+    "\n",
+    "The knight's tour is a special case of a depth first search where the goal is to create the deepest depth first tree, without any branches."
    ]
   }
  ],
