docs: add the code for the dfs graph

--- a/pythonds-8-PE.ipynb
+++ b/pythonds-8-PE.ipynb
@@ -530,7 +530,11 @@
     "\n",
     "### General Depth First Search\n",
     "\n",
-    "The knight's tour is a special case of a depth first search where the goal is to create the deepest depth first tree, without any branches."
+    "The knight's tour is a special case of a depth first search where the goal is to create the deepest depth first tree, without any branches.\n",
+    "\n",
+    "```python\n",
+    "from pythonds.graphs import Graph\n",
+    "```"
    ]
   }
  ],
