feat: add the class of DFS graph

--- a/pythonds-8-PE.ipynb
+++ b/pythonds-8-PE.ipynb
@@ -534,6 +534,10 @@
     "\n",
     "```python\n",
     "from pythonds.graphs import Graph\n",
+    "class DFSGraph(Graph):\n",
+    "  def __init__(self):\n",
+    "    super().__init__()\n",
+    "    self.time = 0\n",
     "```"
    ]
   }
