feat: add the dfs

--- a/pythonds-8-PE.ipynb
+++ b/pythonds-8-PE.ipynb
@@ -538,6 +538,14 @@
     "  def __init__(self):\n",
     "    super().__init__()\n",
     "    self.time = 0\n",
+    "  \n",
+    "  def dfs(self):\n",
+    "    for aVertex in self:\n",
+    "      aVertex.setColor('white')\n",
+    "      aVertex.setPred(-1)\n",
+    "    for aVertex in self:\n",
+    "      if aVertex.getColor() == 'white':\n",
+    "        self.dfsvisit(aVertex)\n",
     "```"
    ]
   }
