feat: add the method dfsvisit

--- a/pythonds-8-PE.ipynb
+++ b/pythonds-8-PE.ipynb
@@ -546,6 +546,17 @@
     "    for aVertex in self:\n",
     "      if aVertex.getColor() == 'white':\n",
     "        self.dfsvisit(aVertex)\n",
+    "  def dfsvisit(self, startVertex):\n",
+    "    startVertex.setColor('gray')\n",
+    "    self.time += 1\n",
+    "    startVertex.setDiscovery(self.time)\n",
+    "    for nextVertex in startVertex.getConnections():\n",
+    "      if nextVertex.getColor() == 'white':\n",
+    "        nextVertex.setPred(startVertex)\n",
+    "        self.dfsvisit(nextVertex)\n",
+    "    startVertex.setColor('black')\n",
+    "    self.time += 1\n",
+    "    startVertex.setFinish(self.time)\n",
     "```"
    ]
   }
