--- a/pythonds-8-PE.ipynb
+++ b/pythonds-8-PE.ipynb
@@ -531,7 +531,9 @@
     "### General Depth First Search\n",
     "\n",
     "The knight's tour is a special case of a depth first search where the goal is to create the deepest depth first tree, without any branches.\n",
-    "\n",
+    "It is even possible that a depth first search will create more than one tree. When the depth first search algorithm creates a group of trees we call this **depth first forest**\n",
+    "The new instance variables are the **discovery and finish times**. The **discovery time** tracks the number of steps in the algorithm before a vertex is first encountered. the **finish time** is the number of steps in the algorithm before a vertex is colored black.\n",
+    "Two functions dfs and its helper dfsvisit use a variable to keep track of the time across calls to dfsvisit we chose to implement the code as methods of a class that inherits from the **Graph** class. This implementation extends the graph class by adding a **time** instance variable and the two methods **dfs** and **dfsvisit**\n",
     "```python\n",
     "from pythonds.graphs import Graph\n",
     "class DFSGraph(Graph):\n",
@@ -557,7 +559,7 @@
     "    startVertex.setColor('black')\n",
     "    self.time += 1\n",
     "    startVertex.setFinish(self.time)\n",
-    "```"
+    "```\n",
    ]
   }
  ],
