docs: go through the dfs and dfsvisit functions

--- a/pythonds-8-PE.ipynb
+++ b/pythonds-8-PE.ipynb
@@ -560,6 +560,12 @@
     "    self.time += 1\n",
     "    startVertex.setFinish(self.time)\n",
     "```\n",
+    "The **dfsvisit** method start with a single vertex called **startVertex** and explores all of the neighboring white vertices as deeply as possible. if you look carefully at the code for **dfsvisit** and compare it to breadth first search, what you should notice is that the **dfsvisit** algorithm is almost identical to **bfs** except that on the last line of the inner **for** loop, **dfsvisit** calls itself recursively to continue the search at a deeper level, whereas **bfs** adds the node to a queue for later exploration. It is interesting to note that where **bfs** uses a queue, **dfsvisit** uses a stack.\n",
+    "\n",
+    "The starting and finishing times for each node display a property called the **parenthesis property**. This property means that all the children of a particular node in the depth first tree have a later discovery time and an earlier finish time than their parent. \n",
+    "\n",
+    "**Add image for dfstree.png.\n",
+    " \n",
    ]
   }
  ],
