--- a/pythonds-8-PE.ipynb
+++ b/pythonds-8-PE.ipynb
@@ -566,6 +566,10 @@
     "\n",
     "**Add image for dfstree.png.\n",
     " \n",
+    "### Depth first search Analysis.\n",
+    "\n",
+    "The general running time for depth first search is as follows. The llops in **dfs** both run in O(V), not counting what happens in **dfsvisit**, since they are executed once for each vertex in the graph. In **dfsvisit** the loop is executed once for each edge in the adjacency list of the current vertex. since **dfsvisit** is only called recursively if the vertex is white, the loop will execute a maximun of once for every edge in the graph or O(E),\n",
+    "so the total time for depth first search is O(V+E)\n"
    ]
   }
  ],
