doc: add the different definitions problem
- shortest path
- topological sorting
- strongly connected components

--- a/pythonds-8-PE.ipynb
+++ b/pythonds-8-PE.ipynb
@@ -570,6 +570,53 @@
     "\n",
     "The general running time for depth first search is as follows. The llops in **dfs** both run in O(V), not counting what happens in **dfsvisit**, since they are executed once for each vertex in the graph. In **dfsvisit** the loop is executed once for each edge in the adjacency list of the current vertex. since **dfsvisit** is only called recursively if the vertex is white, the loop will execute a maximun of once for every edge in the graph or O(E),\n",
     "so the total time for depth first search is O(V+E)\n"
+    "so the total time for depth first search is O(V+E)\n",
+    "\n",
+    "\n",
+    "### Topological sorting\n",
+    "\n",
+    "A topological sort takes a directed acyclic graphand produces a linear ordering of all its vertices such that if the graph G contains an edge(v,w) then the vertex v comes before the vertex w in the ordering. Directed acyclic graphs are used in many applications to indicate the precedence of events. \n",
+    "for instance, the topological sort can be used:\n",
+    "- software project schedules\n",
+    "- precedence charts for optimizing database queries\n",
+    "- multiplying matrices.\n",
+    "\n",
+    "The topological sort is a simple but useful adaptation of a depth first search. The algorithm for the topological sort is as follows:\n",
+    "- Call **dfs(g)** for some graph **g**. The main reason we want to call the depth first search is to compute the finish times for each of the vertices\n",
+    "- Store the vertices in a list in decreasing order of finish time.\n",
+    "- Return the ordered list as the result of the topological sort.\n",
+    "\n",
+    "### Strongly Connected Components\n",
+    "\n",
+    "Here are some general case of large Graph problems, for instance:\n",
+    "- Graphs produced by the connections between hosts on the internet\n",
+    "- Graphs produced by the links between web pages.\n",
+    "\n",
+    "**Strongly connected componets algorithm(SCC)** is a graph algorithm that can help find cluster of highly interconnected vertices in a graph. we formally define a **strongly connected component**, C, of a graph G, as the largest subset of vertices C include V such that for every pair of vertices v, w belongs C we have a path from v to w and a path form w to v.\n",
+    "\n",
+    "add an image of scc1.png\n",
+    "\n",
+    "Once the strongly connected components have been identified we can show a simplified view of the graph by combining all the vertices in on strongly connected component into a single large vertex.\n",
+    "\n",
+    "The **transposition** of a graph G is defined as the graph G^T where all the edges in the graph have been reversed. That is, if there is a directed edge from node A to node B in the original graph then G^T will contain and edge from nodeB to nodeA. \n",
+    "\n",
+    "let's describe the algorithm to computer the strongly connected components for a graph:\n",
+    "1. Call **dfs** for the graph G to compute the finish times for each vertex.\n",
+    "2. Compute G^T\n",
+    "3. Call **dfs** for the graph G^T but in the main loop of DFS explore each vertex in decreasing order of finish time.\n",
+    "4. Each tree in the forest computed in step 3 is a strongly connected component. Output the vertex ids for each verex in each tree in the forest to identify the component.\n",
+    "\n",
+    "### Shortest Path Problems\n",
+    "\n",
+    "The problem that we want to solve is to find the path with smallest total weight along which to route any given message. This problem should sound familiar because it is similar to the problem we solved using a breadth first search, except that here we are concerned with the total weight of the path rather than the number of hops in the path. It should be noted that if all the weights are equal, the problem is the same.\n",
+    "\n",
+    "### Dijkstra's Algorithm(related to the shortest Path Problem)\n",
+    "Dijkstra's algorithm is an iterative algorithm that provides us with the shortest path form one particular starting node to all other nodes in the graph.\n",
+    "\n",
+    "To keep track of the total cost from th start node to each destination we will make use of the **dist** instance variable in the Vertex class. the **dist** instance variable will contain the current total weight of the smallest weight path from the start to the vertex in question. The algorithm iterates once for every vertex in the graph; however, the order that we iterate over the vertices is controlled by a priority queue.\n",
+    "\n",
+    "The value that is used to determine the order of the objects in the priority queue is **dist**. when a vertex is first created **dist** is set to a very large number. Theoretically you would set **dist** to infinity, but in practice we just set it to a number that is larger than any real distance we would have in the problem we are trying to solve.\n",
+    "\n",
    ]
   }
  ],
