docs: explain of the dijkstra algorithm

--- a/pythonds-8-PE.ipynb
+++ b/pythonds-8-PE.ipynb
@@ -617,6 +617,27 @@
     "\n",
     "The value that is used to determine the order of the objects in the priority queue is **dist**. when a vertex is first created **dist** is set to a very large number. Theoretically you would set **dist** to infinity, but in practice we just set it to a number that is larger than any real distance we would have in the problem we are trying to solve.\n",
     "\n",
+    "```python\n",
+    "from pythonds.graphs import PriorityQueue, Graph, Vertex\n",
+    "def dijkstra(aGraph, start):\n",
+    "  pq = PriorityQueue()\n",
+    "  start.setDistance(0)\n",
+    "  pq.buildHeap([(v.getDistance(), v) from v in aGraph])\n",
+    "  while not pq.isEmpty():\n",
+    "    currentVertex = pq.delMin()\n",
+    "    for nextVert in currentVert.getConnections():\n",
+    "      newDist = currentVert.getDistance() \\\n",
+    "        + currentVert.getWeight(nextVert)\n",
+    "      if newDist < nextVert.getDistance():\n",
+    "        nextVert.setDistance( newDist )\n",
+    "        nextVert.setPred(currentVert)\n",
+    "        pq.decreaseKey(nextVert, newDist)\n",
+    "\n",
+    "```\n",
+    "NOTE: Dijstra's algorithm works only when the weights are all positive. You should connice yourself that if you introduced a negative weight on one of the edges to the graph that the algorithm would never exit.\n",
+    "\n",
+    "We will note that to route messages through the Internet, other algorithms are used for finding the shortest path. One of the problems with using Dijkstra’s algorithm on the Internet is that you must have a complete representation of the graph in order for the algorithm to run. The implication of this is that every router has a complete map of all the routers in the Internet. In practice this is not the case and other variations of the algorithm allow each router to discover the graph as they go. One such algorithm that you may want to read about is called the **distance vector** routing algorithm.\n",
+    "\n",
    ]
   }
  ],
