docs: explain and method for the spanning tree problem

--- a/pythonds-8-PE.ipynb
+++ b/pythonds-8-PE.ipynb
@@ -638,6 +638,44 @@
     "\n",
     "We will note that to route messages through the Internet, other algorithms are used for finding the shortest path. One of the problems with using Dijkstra’s algorithm on the Internet is that you must have a complete representation of the graph in order for the algorithm to run. The implication of this is that every router has a complete map of all the routers in the Internet. In practice this is not the case and other variations of the algorithm allow each router to discover the graph as they go. One such algorithm that you may want to read about is called the **distance vector** routing algorithm.\n",
     "\n",
+    "### Prim's Spanning Tree Algorithm\n",
+    "\n",
+    "The minimu spanning tree T for a graph G = (V, E) is an acyclic subset of E that connects all the vertices in V. the sum of the weights of the edges in T is minimized\n",
+    "add mst1.png\n",
+    "Now to solve our broadcast problem, the broadcast host simply sends a single copy of the broadcast message into the network. Each router forwards the message to any neighbor that is part of the spanning tree, excluding the neighbor that just sent it the message. In this example A forwards the message to B. B forwards the message to D and C. D forwards the message to E, which forwards it to F, which forwards it to G. No router sees more than one copy of any message, and all the listeners that are interested see a copy of the message.\n",
+    "\n",
+    "the algorithm we will use to solve this problem is called **Prim's algorithm**. Prim's algorithm belongs to a family of algorithms called the **greedy algorithms** because at each step we will choose the cheapest next step. In this case the cheapest next step is to follow the edge with the lowest weight. Our last step is to develop Prim's algorithm.\n",
+    "\n",
+    "Pseudocode\n",
+    "```sh\n",
+    "While T is not yet a spanning Tree\n",
+    "  Find an edge that is safe to add to the tree\n",
+    "  Add the new edge to T\n",
+    "```\n",
+    "The trick is in the step that directs us to “find an edge that is safe.” We define a safe edge as any edge that connects a vertex that is in the spanning tree to a vertex that is not in the spanning tree. This ensures that the tree will always remain a tree and therefore have no cycles\n",
+    "\n",
+    "Similar to the Dijkstra's algorithm, they all use the priority queue to select the next vertexto add to the growing graph.\n",
+    "\n",
+    "```python\n",
+    "from pythonds.graphs import PriorityQueue, Graph, Vertex\n",
+    "\n",
+    "def prim(G, start):\n",
+    "  pq = PriorityQueue()\n",
+    "  for v in G:\n",
+    "    v.setDistance(sys.maxsize)\n",
+    "    v.setPred(None)\n",
+    "  start.setDistance(0)\n",
+    "  pq.buildHeap([(v.getDistance(), v) for v in G])\n",
+    "  while not pq.isEmpty():\n",
+    "    currentVert = pq.delMin()\n",
+    "    for nextVert in currentVert.getConnections():\n",
+    "      newCost = currentVert.getWeight(nextVert)\n",
+    "      if nextVert in pq and newCost < nextVert.getdistance():\n",
+    "        nextVert.setPred(currentVert)\n",
+    "        nextVert.setDistance(newCost)\n",
+    "        pq.decreaseKey(nextVert, newCost)\n",
+    "```\n",
+    "\n",
    ]
   }
  ],
