docs: add the key terms and problem solved by the graph

--- a/pythonds-8-PE.ipynb
+++ b/pythonds-8-PE.ipynb
@@ -676,6 +676,38 @@
     "        pq.decreaseKey(nextVert, newCost)\n",
     "```\n",
     "\n",
+    "### general problems solved by the graph\n",
+    "- Breadth first search for finding the unweighted shortest path\n",
+    "- Dijkstra's algorithm for weighted shortest path\n",
+    "- Depth first search for graph exploration\n",
+    "- Strongly connected components for simplying a graph.\n",
+    "- Topological sort for ordering tasks.\n",
+    "- Minimum weight spanning trees for broadcasting messages\n",
+    "\n",
+    "\n",
+    "### key terms:\n",
+    "- vertex\n",
+    "- edge\n",
+    "- weight\n",
+    "- acyclic graph\n",
+    "- adjacent\n",
+    "- adjacency list\n",
+    "- adjacency matrix\n",
+    "- cycle\n",
+    "- cyclic graph\n",
+    "- depth first search (DFS)\n",
+    "- Depth first forest\n",
+    "- breadth first search\n",
+    "- directed graph\n",
+    "- DAG\n",
+    "- directed acyclic graph(DAG)\n",
+    "- edge cost\n",
+    "- parenthesis property\n",
+    "- path\n",
+    "- shortest path\n",
+    "- spanning tree\n",
+    "- strongly connected components(SCC)\n",
+    "- topological sort & uncontrolled flooding"
    ]
   }
  ],
