docs: add more information for UnorderedList and orderedList

--- a/pythonds-4-PE.ipynb
+++ b/pythonds-4-PE.ipynb
@@ -1156,7 +1156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "8812376c",
    "metadata": {},
    "outputs": [
@@ -1170,7 +1170,7 @@
    ],
    "source": [
     "\"\"\"\n",
-    "16. Implement the __str__ method in the UnorderedList class. \n",
+    "16. Implement the __str__ method in the UnorderedList class (Linked-list). \n",
     "What would be a good string representation for a list?\n",
     "Explain: The __str__() method returns a human-readable, or informal, string representation of an object. \n",
     "This method is called by the built-in print(), str(), and format() functions.\n",
@@ -1337,7 +1337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "eb81d406",
    "metadata": {},
    "outputs": [
@@ -1351,7 +1351,7 @@
    ],
    "source": [
     "\"\"\"\n",
-    "17. Implement __str__ method so that lists are displayed the Python way (with square brackets).\n",
+    "17. Implement __str__ method so that lists are displayed the Python way (with square brackets) - Linked List.\n",
     "\"\"\"\n",
     "\n",
     "from pythonds.basic import Node\n",
@@ -1519,7 +1519,7 @@
    "outputs": [],
    "source": [
     "\"\"\"\n",
-    "18. Implement the remaining operations defined in the UnorderedList ADT (append, index, pop, insert).\n",
+    "18. Implement the remaining operations defined in the UnorderedList ADT (append, index, pop, insert) - linked list.\n",
     "\"\"\"\n",
     "class Node:\n",
     "    def __init__(self, initialData):\n",
@@ -1652,7 +1652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "id": "43a4f006",
    "metadata": {},
    "outputs": [
@@ -1667,7 +1667,7 @@
    ],
    "source": [
     "\"\"\"\n",
-    "19. Implement a slice method for the UnorderedList class. \n",
+    "19. Implement a slice method for the UnorderedList class(Linked list). \n",
     "It should take two parameters, start and stop, \n",
     "and return a copy of the list starting at the start position \n",
     "and going up to but not including the stop position. \n",
