--- a/algorithm.ipynb
+++ b/algorithm.ipynb
@@ -65,7 +65,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "3.12.6",
    "language": "python",
    "name": "python3"
   },
