fix: solve the datatype hint in the parameter of the function

--- a/pythonds-5-PE.ipynb
+++ b/pythonds-5-PE.ipynb
@@ -4029,7 +4029,7 @@
     "\n",
     "\"\"\"\n",
     "class Solution:\n",
-    "    def canPlaceFlowers(self, flowerbed: List[int], n: int) -> bool:\n",
+    "    def canPlaceFlowers(self, flowerbed: list[int], n: int) -> bool:\n",
     "        length_flowerbed = len(flowerbed)\n",
     "        if n == 0:\n",
     "             return True\n",
