--- a/pythonds-4-PE.ipynb
+++ b/pythonds-4-PE.ipynb
@@ -2607,12 +2607,109 @@
    "execution_count": null,
    "id": "69ff345c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Starting to measure the Append method for both List and LinkedList\n",
+      "Function 'measure_append_unordered_list' took 0.00042874600057984935 seconds to execute.\n",
+      "program will continue after 5 seconds\n",
+      "Function 'measure_append_list' took 3.506400025798939e-05 seconds to execute.\n"
+     ]
+    }
+   ],
    "source": [
     "\"\"\"\n",
     "25. Design and implement an experiment that will compare the performance\n",
     "    of a python list with a list implemented as a linked list.\n",
-    "\"\"\""
+    "\"\"\"\n",
+    "\n",
+    "\"\"\"\n",
+    "solution: we are going to compare a unordered list of linked-list and an unordered python list\n",
+    "Operation to be performed: add, append, remove, pop \n",
+    "\"\"\"\n",
+    "import random\n",
+    "import time\n",
+    "from pythonds.basic import BaseList\n",
+    "from pythonds.basic import Node\n",
+    "\n",
+    "def time_it(func):\n",
+    "    def wrapper(*args, **kargs):\n",
+    "        start_time = time.perf_counter()\n",
+    "        result = func(*args, **kargs)\n",
+    "        end_time = time.perf_counter()\n",
+    "        elapsed_time = end_time - start_time\n",
+    "        print(f\"Function '{func.__name__}' took {elapsed_time} seconds to execute.\")\n",
+    "        return result\n",
+    "    return wrapper\n",
+    "\n",
+    "class UnorderedList(BaseList):\n",
+    "    def add(self, item):\n",
+    "        tempNode = Node(item)\n",
+    "        tempNode.setNextData(self.head)\n",
+    "        self.head  = tempNode\n",
+    "        previous = None\n",
+    "        current = self.head\n",
+    "        while current.getNextData() != None:\n",
+    "            previous = current\n",
+    "            current = current.getNextData()\n",
+    "        self.queue = previous\n",
+    "        self.number_of_elts +=1\n",
+    "        \n",
+    "    def append(self, item):\n",
+    "        current = self.head\n",
+    "        previous = None\n",
+    "        while current != None:\n",
+    "            previous = current\n",
+    "            current = current.getNextData()\n",
+    "        ## TODO: when the linked list empty, you can not append because the self.head is NONETYPE\n",
+    "        newNode = Node(item)\n",
+    "        newNode.setNextData(current)\n",
+    "        previous.setNextData(newNode)\n",
+    "        self.number_of_elts +=1\n",
+    "        \n",
+    "    def insert(self, pos, item):\n",
+    "        current = self.head\n",
+    "        count = 0\n",
+    "        position = pos-1\n",
+    "        while count < position and current != None:\n",
+    "            current = current.getNextData()\n",
+    "            count = count + 1\n",
+    "        newNode = Node(item)\n",
+    "        newNode.setNextData(current.getNextData())\n",
+    "        current.setNextData(newNode)\n",
+    "        self.number_of_elts +=1\n",
+    "\n",
+    "\n",
+    "def generate_numbers(n: int) -> list:\n",
+    "    return [ random.randint(1, 10000) for i in range(n)]\n",
+    "\n",
+    "@time_it\n",
+    "def measure_append_unordered_list(n: list):\n",
+    "    unordered_to_be_measured = UnorderedList()\n",
+    "    unordered_to_be_measured.add(1)\n",
+    "    for i in n:\n",
+    "        unordered_to_be_measured.append(i)\n",
+    "     \n",
+    "@time_it\n",
+    "def measure_append_list(n: list):\n",
+    "    list_to_be_measured = []\n",
+    "    for i in n:\n",
+    "        list_to_be_measured.append(i)\n",
+    "\n",
+    "def main():\n",
+    "    sample_nums = generate_numbers(100)\n",
+    "    print(\"Starting to measure the Append method for both List and LinkedList\")\n",
+    "\n",
+    "    measure_append_unordered_list(sample_nums) \n",
+    "\n",
+    "    time.sleep(5)\n",
+    "    print(\"program will continue after 5 seconds\")\n",
+    "\n",
+    "    measure_append_list(sample_nums)\n",
+    "\n",
+    "main()\n"
    ]
   },
   {
@@ -2853,7 +2950,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "3.12.6",
    "language": "python",
    "name": "python3"
   },
@@ -2867,7 +2964,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
