refactor: change the time calculation into nanoseconds

--- a/pythonds-4-PE.ipynb
+++ b/pythonds-4-PE.ipynb
@@ -2613,9 +2613,9 @@
      "output_type": "stream",
      "text": [
       "Starting to measure the Append method for both List and LinkedList\n",
-      "Function 'measure_append_unordered_list' took 0.00042874600057984935 seconds to execute.\n",
+      "Function 'measure_append_unordered_list' took 1220886 seconds to execute.\n",
       "program will continue after 5 seconds\n",
-      "Function 'measure_append_list' took 3.506400025798939e-05 seconds to execute.\n"
+      "Function 'measure_append_list' took 33564 seconds to execute.\n"
      ]
     }
    ],
@@ -2636,11 +2636,11 @@
     "\n",
     "def time_it(func):\n",
     "    def wrapper(*args, **kargs):\n",
-    "        start_time = time.perf_counter()\n",
+    "        start_time = time.perf_counter_ns()\n",
     "        result = func(*args, **kargs)\n",
-    "        end_time = time.perf_counter()\n",
+    "        end_time = time.perf_counter_ns()\n",
     "        elapsed_time = end_time - start_time\n",
-    "        print(f\"Function '{func.__name__}' took {elapsed_time} seconds to execute.\")\n",
+    "        print(f\"Function '{func.__name__}' took {elapsed_time} nanoseconds to execute.\")\n",
     "        return result\n",
     "    return wrapper\n",
     "\n",
