fix: add a logic to append when list is empty

--- a/pythonds-4-PE.ipynb
+++ b/pythonds-4-PE.ipynb
@@ -2666,7 +2666,11 @@
     "        ## TODO: when the linked list empty, you can not append because the self.head is NONETYPE\n",
     "        newNode = Node(item)\n",
     "        newNode.setNextData(current)\n",
-    "        previous.setNextData(newNode)\n",
+    "        if self.head == None:\n",
+    "            self.head = newNode\n",
+    "            previous = self.head\n",
+    "        else:\n",
+    "            previous.setNextData(newNode)\n",
     "        self.number_of_elts +=1\n",
     "        \n",
     "    def insert(self, pos, item):\n",
