refactor: add a return to the function

--- a/pythonds-4-PE.ipynb
+++ b/pythonds-4-PE.ipynb
@@ -2690,17 +2690,18 @@
     "    return [ random.randint(1, 10000) for i in range(n)]\n",
     "\n",
     "@time_it\n",
-    "def measure_append_unordered_list(n: list):\n",
+    "def measure_append_unordered_list(n: list) -> UnorderedList:\n",
     "    unordered_to_be_measured = UnorderedList()\n",
-    "    unordered_to_be_measured.add(1)\n",
     "    for i in n:\n",
     "        unordered_to_be_measured.append(i)\n",
-    "     \n",
+    "    return unordered_to_be_measured\n",
+    "    \n",
     "@time_it\n",
-    "def measure_append_list(n: list):\n",
+    "def measure_append_list(n: list) -> list:\n",
     "    list_to_be_measured = []\n",
     "    for i in n:\n",
     "        list_to_be_measured.append(i)\n",
+    "    return list_to_be_measured\n",
     "\n",
     "def main():\n",
     "    sample_nums = generate_numbers(100)\n",
