refactor: beautify the output for the function

--- a/pythonds-4-PE.ipynb
+++ b/pythonds-4-PE.ipynb
@@ -2640,7 +2640,7 @@
     "        result = func(*args, **kargs)\n",
     "        end_time = time.perf_counter_ns()\n",
     "        elapsed_time = end_time - start_time\n",
-    "        print(f\"Function '{func.__name__}' took {elapsed_time} nanoseconds to execute.\")\n",
+    "        print(f\"==> Function '{func.__name__}' took {elapsed_time} nanoseconds to execute.\")\n",
     "        return result\n",
     "    return wrapper\n",
     "\n",
