refactor: add informational printing to verify assumptions

--- a/pythonds-4-PE.ipynb
+++ b/pythonds-4-PE.ipynb
@@ -2704,15 +2704,17 @@
     "    return list_to_be_measured\n",
     "\n",
     "def main():\n",
-    "    sample_nums = generate_numbers(100)\n",
+    "    sample_nums = generate_numbers(20)\n",
     "    print(\"Starting to measure the Append method for both List and LinkedList\")\n",
     "\n",
-    "    measure_append_unordered_list(sample_nums) \n",
+    "    uo_linked_list = measure_append_unordered_list(sample_nums)\n",
     "\n",
     "    time.sleep(5)\n",
     "    print(\"program will continue after 5 seconds\")\n",
     "\n",
-    "    measure_append_list(sample_nums)\n",
+    "    py_list = measure_append_list(sample_nums)\n",
+    "    \n",
+    "    print(\"End of the Append method\\n\\n\")\n",
     "\n",
     "main()\n"
    ]
