feat: add pop function to be timed

--- a/pythonds-4-PE.ipynb
+++ b/pythonds-4-PE.ipynb
@@ -2703,6 +2703,16 @@
     "        list_to_be_measured.append(i)\n",
     "    return list_to_be_measured\n",
     "\n",
+    "@time_it\n",
+    "def measure_pop_unordered_list(n: UnorderedList):\n",
+    "    while not n.isEmpty:\n",
+    "        n.pop()\n",
+    "@time_it\n",
+    "def measure_pop_list(n: list):\n",
+    "    while len(n) != 0:\n",
+    "        n.pop()\n",
+    "\n",
+    "\n",
     "def main():\n",
     "    sample_nums = generate_numbers(20)\n",
     "    print(\"Starting to measure the Append method for both List and LinkedList\")\n",
@@ -2715,7 +2725,14 @@
     "    py_list = measure_append_list(sample_nums)\n",
     "    \n",
     "    print(\"End of the Append method\\n\\n\")\n",
+    "    print(\"Starting to measure the Pop method for both List and LinkedList\")\n",
     "\n",
+    "    measure_pop_unordered_list(uo_linked_list)\n",
+    "\n",
+    "    time.sleep(5)\n",
+    "    print(\"program will continue after 5 seconds\")\n",
+    "\n",
+    "    measure_pop_list(py_list)\n",
     "main()\n"
    ]
   },
