docs: add the output for the test

--- a/pythonds-4-PE.ipynb
+++ b/pythonds-4-PE.ipynb
@@ -2604,7 +2604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "69ff345c",
    "metadata": {},
    "outputs": [
@@ -2613,7 +2613,12 @@
      "output_type": "stream",
      "text": [
       "Starting to measure the Append method for both List and LinkedList\n",
-      "Function 'measure_append_unordered_list' took 1220886 seconds to execute.\n",
+      "==> Function 'measure_append_unordered_list' took 40511 nanoseconds to execute.\n",
+      "program will continue after 5 seconds\n",
+      "==> Function 'measure_append_list' took 6622 nanoseconds to execute.\n",
+      "End of the Append method\n",
+      "\n",
+      "\n",
       "Starting to measure the Pop method for both List and LinkedList\n",
       "==> Function 'measure_pop_unordered_list' took 2075 nanoseconds to execute.\n",
       "program will continue after 5 seconds\n",
