fix: solve the bug of the insert the first element in the linkedlist

--- a/pythonds-4-PE.ipynb
+++ b/pythonds-4-PE.ipynb
@@ -2688,8 +2688,12 @@
     "            current = current.getNextData()\n",
     "            count = count + 1\n",
     "        newNode = Node(item)\n",
-    "        newNode.setNextData(current.getNextData())\n",
     "        current.setNextData(newNode)\n",
+    "        if current == None:\n",
+    "            self.head = newNode\n",
+    "        else:\n",
+    "            newNode.setNextData(current.getNextData())\n",
+    "            current.setNextData(newNode)\n",
     "        self.number_of_elts +=1\n",
     "\n",
     "\n",
