docs: add comment to know the method tested

--- a/pythonds-4-PE.ipynb
+++ b/pythonds-4-PE.ipynb
@@ -2699,6 +2699,7 @@
     "def generate_numbers(n: int) -> list:\n",
     "    return [ random.randint(1, 10000) for i in range(n)]\n",
     "\n",
+    "# function to test the APPEND method\n",
     "@time_it\n",
     "def measure_append_unordered_list(n: list) -> UnorderedList:\n",
     "    unordered_to_be_measured = UnorderedList()\n",
