docs: add comments to point the method being tested

--- a/pythonds-4-PE.ipynb
+++ b/pythonds-4-PE.ipynb
@@ -2714,6 +2714,7 @@
     "        list_to_be_measured.append(i)\n",
     "    return list_to_be_measured\n",
     "\n",
+    "# function to test the POP method\n",
     "@time_it\n",
     "def measure_pop_unordered_list(n: UnorderedList):\n",
     "    while not n.isEmpty:\n",
