--- a/pythonds-4-PE.ipynb
+++ b/pythonds-4-PE.ipynb
@@ -2724,6 +2724,30 @@
     "    while len(n) != 0:\n",
     "        n.pop()\n",
     "\n",
+    "# function to test the INSERT method\n",
+    "@time_it\n",
+    "def measure_insert_unordered_list(n: list) -> list:\n",
+    "    unordered_to_be_measured = UnorderedList()\n",
+    "    for i in n:\n",
+    "        unordered_to_be_measured.insert(0, i)\n",
+    "    return unordered_to_be_measured\n",
+    "@time_it\n",
+    "def measure_insert_list(n: list)-> list:\n",
+    "    lst_to_be_measured = []\n",
+    "    for i in n:\n",
+    "        lst_to_be_measured.insert(0, i)\n",
+    "    return lst_to_be_measured\n",
+    "\n",
+    "\n",
+    "# function to test the REMOVE method\n",
+    "@time_it\n",
+    "def measure_remove_unordered_list(n: list):\n",
+    "    for i in n:\n",
+    "        n.remove(i)\n",
+    "@time_it\n",
+    "def measure_remove_list(n: list):\n",
+    "    for i in n:\n",
+    "        n.remove(i)\n",
     "\n",
     "def main():\n",
     "    sample_nums = generate_numbers(20)\n",
