refactor: capitalize the method name for clarity

--- a/pythonds-4-PE.ipynb
+++ b/pythonds-4-PE.ipynb
@@ -2750,8 +2750,8 @@
     "        n.remove(i)\n",
     "\n",
     "def main():\n",
-    "    sample_nums = generate_numbers(20)\n",
-    "    print(\"Starting to measure the Append method for both List and LinkedList\")\n",
+    "    sample_nums = generate_numbers(5)\n",
+    "    print(\"Starting to measure the APPEND method for both List and LinkedList\")\n",
     "\n",
     "    uo_linked_list = measure_append_unordered_list(sample_nums)\n",
     "\n",
@@ -2760,8 +2760,8 @@
     "\n",
     "    py_list = measure_append_list(sample_nums)\n",
     "    \n",
-    "    print(\"End of the Append method\\n\\n\")\n",
-    "    print(\"Starting to measure the Pop method for both List and LinkedList\")\n",
+    "    print(\"End of the APPEND method\", end=\"\\n\\n\")\n",
+    "    print(\"Starting to measure the POP method for both List and LinkedList\")\n",
     "\n",
     "    measure_pop_unordered_list(uo_linked_list)\n",
     "\n",
@@ -2769,6 +2769,7 @@
     "    print(\"program will continue after 5 seconds\")\n",
     "\n",
     "    measure_pop_list(py_list)\n",
+    "    print(\"End of the POP method\", end=\"\\n\\n\")\n",
     "main()\n"
    ]
   },
