chore: add the display result for the test

--- a/pythonds-4-PE.ipynb
+++ b/pythonds-4-PE.ipynb
@@ -2770,6 +2770,28 @@
     "\n",
     "    measure_pop_list(py_list)\n",
     "    print(\"End of the POP method\", end=\"\\n\\n\")\n",
+    "\n",
+    "    print(\"Starting to measure the INSERT method for both List and LinkedList\")\n",
+    "\n",
+    "    uo_linked_list = measure_insert_unordered_list(sample_nums)\n",
+    "\n",
+    "    time.sleep(5)\n",
+    "    print(\"program will continue after 5 seconds\")\n",
+    "\n",
+    "    py_list = measure_insert_list(sample_nums)\n",
+    "    print(\"End of the INSERT method\", end=\"\\n\\n\")\n",
+    "    \n",
+    "    print(\"Starting to measure the REMOVE method for both List and LinkedList\")\n",
+    "\n",
+    "    measure_remove_unordered_list(sample_nums)\n",
+    "\n",
+    "    time.sleep(5)\n",
+    "    print(\"program will continue after 5 seconds\")\n",
+    "\n",
+    "    measure_remove_list(py_list)\n",
+    "    print(\"End of the REMOVE method\")\n",
+    "\n",
+    "\n",
     "main()\n"
    ]
   },
