docs: replace the add function with insert to have same method existing in both datatype

--- a/pythonds-4-PE.ipynb
+++ b/pythonds-4-PE.ipynb
@@ -2634,7 +2634,7 @@
     "\n",
     "\"\"\"\n",
     "solution: we are going to compare a unordered list of linked-list and an unordered python list\n",
-    "Operation to be performed: add, append, remove, pop \n",
+    "Operation to be performed: insert, append, remove, pop \n",
     "\"\"\"\n",
     "import random\n",
     "import time\n",
