chore: resolve of the tests

--- a/pythonds-4-PE.ipynb
+++ b/pythonds-4-PE.ipynb
@@ -2612,17 +2612,29 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Starting to measure the Append method for both List and LinkedList\n",
-      "==> Function 'measure_append_unordered_list' took 40511 nanoseconds to execute.\n",
+      "Starting to measure the APPEND method for both List and LinkedList\n",
+      "==> Function 'measure_append_unordered_list' took 17980 nanoseconds to execute.\n",
       "program will continue after 5 seconds\n",
-      "==> Function 'measure_append_list' took 6622 nanoseconds to execute.\n",
-      "End of the Append method\n",
+      "==> Function 'measure_append_list' took 14333 nanoseconds to execute.\n",
+      "End of the APPEND method\n",
       "\n",
-      "\n",
-      "Starting to measure the Pop method for both List and LinkedList\n",
-      "==> Function 'measure_pop_unordered_list' took 2075 nanoseconds to execute.\n",
+      "Starting to measure the POP method for both List and LinkedList\n",
+      "==> Function 'measure_pop_unordered_list' took 6238 nanoseconds to execute.\n",
       "program will continue after 5 seconds\n",
-      "==> Function 'measure_pop_list' took 8035 nanoseconds to execute.\n"
+      "==> Function 'measure_pop_list' took 21491 nanoseconds to execute.\n",
+      "End of the POP method\n",
+      "\n",
+      "Starting to measure the INSERT method for both List and LinkedList\n",
+      "==> Function 'measure_insert_unordered_list' took 70905 nanoseconds to execute.\n",
+      "program will continue after 5 seconds\n",
+      "==> Function 'measure_insert_list' took 16630 nanoseconds to execute.\n",
+      "End of the INSERT method\n",
+      "\n",
+      "Starting to measure the REMOVE method for both List and LinkedList\n",
+      "==> Function 'measure_remove_unordered_list' took 8082 nanoseconds to execute.\n",
+      "program will continue after 5 seconds\n",
+      "==> Function 'measure_remove_list' took 15389 nanoseconds to execute.\n",
+      "End of the REMOVE method\n"
      ]
     }
    ],
