--- a/pythonds-4-PE.ipynb
+++ b/pythonds-4-PE.ipynb
@@ -2604,7 +2604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "69ff345c",
    "metadata": {},
    "outputs": [
@@ -2804,6 +2804,28 @@
     "\n",
     "\n",
     "main()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "45753a94",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 3, 2]\n"
+     ]
+    }
+   ],
+   "source": [
+    "lst_test = []\n",
+    "lst_test.insert(1,1)\n",
+    "lst_test.insert(1,2)\n",
+    "lst_test.insert(1,3)\n",
+    "print(lst_test)"
    ]
   },
   {
